[package]
name = "chook"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/shell-pool/chook"
authors = ["Ethan Pailes <pailes@google.com>"]
readme = "README.md"
description = '''
chook allows injecting code into child processes.

For now, it is just a placeholder.
'''
license = "Apache-2.0"
keywords = ["subprocess", "hook"]
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
